--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "expo": "^30.0.1",
+    "expo-graphics": "^1.0.0-alpha.6",
+    "expo-three": "^3.0.0-alpha.4",
     "firebase": "^5.5.6",
     "native-base": "^2.8.1",
     "react": "16.3.1",
